--- a/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.html
+++ b/src/app/dashboard/components/exercises/exercises-create/exercises-create.component.html
@@ -56,10 +56,10 @@
                                             <mat-radio-button value="3">Modo ejercicio: Mostrar solo la puntuación</mat-radio-button>
                                             <mat-radio-button value="4">Mostrar la nota a cada intento, mostrar las respuestas correctas solo en el último intento (solo funciona si hay un límite de intentos)</mat-radio-button>
                                             <mat-radio-button value="5">No mostrar el puntaje (sólo cuando el usuario finaliza todos los intentos) pero mostrar la retroalimentación por cada intento.</mat-radio-button>
-                                            <mat-radio-button value="6">Modo clasificación: No mostrar los detalles de resultados pregunta por pregunta y mostrar una tabla con la clasificación de todos los demás usuarios.</mat-radio-button>
+                                            <!-- <mat-radio-button value="6">Modo clasificación: No mostrar los detalles de resultados pregunta por pregunta y mostrar una tabla con la clasificación de todos los demás usuarios.</mat-radio-button>
                                             <mat-radio-button value="7">Mostrar sólo la nota global (no la nota de cada pregunta) y mostrar sólo la respuesta correcta, no las incorrectas</mat-radio-button>
                                             <mat-radio-button value="8">Mostrar sólo la nota global (no la nota de cada pregunta) y mostrar la respuesta correcta y la respuesta seleccionada por el alumno + modo clasificación.</mat-radio-button>
-                                            <mat-radio-button value="9">Muestra solo un radar de puntuaciones por categoría, en lugar de una tabla de categorías. No muestra puntuaciones o comentarios individuales.</mat-radio-button>
+                                            <mat-radio-button value="9">Muestra solo un radar de puntuaciones por categoría, en lugar de una tabla de categorías. No muestra puntuaciones o comentarios individuales.</mat-radio-button> -->
                                             <mat-divider></mat-divider>
                                     </mat-radio-group>
                                 </div>
@@ -77,7 +77,7 @@
                                     </mat-radio-group>
                                 </div>
 
-                                <p>Barajar respuestas</p>
+                                <!-- <p>Barajar respuestas</p>
                                 <div class="options">
                                     <mat-radio-group
                                         aria-label="seleccione una opción"
@@ -88,7 +88,7 @@
                                             <mat-radio-button value="2">No</mat-radio-button>
                                             <mat-divider></mat-divider>
                                     </mat-radio-group>
-                                </div>
+                                </div> -->
 
                                 <p>Número máximo de intentos</p>
                                 <div class="options">
