--- a/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
+++ b/src/app/course-view/components/evaluation/evaluation-finish/evaluation-finish.component.html
@@ -1,1 +1,29 @@
-<p>evaluation-finish works!</p>
+<main>
+    <section class="end-text">
+       <h2 *ngIf="!revitionView"> {{ textoFinal}}</h2>
+       <h2 *ngIf="revitionView">Resultado de tu prueba</h2>
+       <p *ngIf="test?.retroalimentacion === 1">Debias obtener un {{test?.porcentaje}}% para aprobar.</p>
+       <p *ngIf="test?.retroalimentacion === 1">Has obtenido un resultado de {{result}}%</p>
+       <p *ngIf="revition">Hay preguntas pendientes de revisión por el tutor.</p>
+    </section>
+    <section class="answers-revition" *ngIf="test?.retroalimentacion === 1">
+        <div class="answers-list" *ngFor="let item of answers; let i = index">
+            <p>{{'pregunta ' + (i + 1)}}</p>
+            <!-- respuesta correcta -->
+            <mat-icon *ngIf="item.valor === 100 && item.tipoPregunta !== 5" style="color: green;">check_circle</mat-icon>
+            <p *ngIf="item.valor === 100 && item.tipoPregunta !== 5">Correcta</p>
+            <!-- Parcialmente correcta -->
+            <mat-icon *ngIf="item.valor > 0 && item.valor < 100 && item.tipoPregunta !== 5" style="color: orange;">error</mat-icon>
+            <p *ngIf="item.valor > 0 && item.valor < 100 && item.tipoPregunta !== 5">Parcial</p>
+            <!-- repuesta incorrecta -->
+            <mat-icon *ngIf="item.valor === 0 && item.tipoPregunta !== 5" style="color: tomato;">error</mat-icon>
+            <p *ngIf="item.valor === 0 && item.tipoPregunta !== 5">Incorrecta</p>
+            <!-- Respuestas libres -->
+            <mat-icon *ngIf="item.tipoPregunta == 5" style="color: orange;">error</mat-icon>
+            <p *ngIf="item.tipoPregunta === 5">Pendiente por revisión</p>
+        </div>
+    </section>
+    <section *ngIf="revitionView">
+        <button mat-raised-button color="primary" style="margin: 16px;" (click)="goBack()">Regresar</button>
+    </section>
+</main>
