--- a/src/app/home/components/auth/recover/recover.component.scss
+++ b/src/app/home/components/auth/recover/recover.component.scss
@@ -80,6 +80,11 @@ app-footer {
     width: 100%;
 }
 
+.mensajeError
+{
+    color:red;
+}
+
 @media (max-width: 480px) {
     .recover-container .recover {
         padding: 5px;
