--- a/src/app/course-view/components/evaluation/evaluation-view/evaluation-view.component.scss
+++ b/src/app/course-view/components/evaluation/evaluation-view/evaluation-view.component.scss
@@ -117,7 +117,7 @@ main {
     .multiple-selection {
         display: flex;
         flex-direction: column;
-    
+
         .multiple-opt {
             display: flex;
             align-items: center;
@@ -149,7 +149,11 @@ main {
                 padding: 8px 16px;
             }
 
-            
+            .rel-question,
+            .relation-opt {
+                display: flex;
+            }
+
         }
     }
 
