--- a/src/app/dashboard/components/lessons/lesson-create/lesson-create.component.html
+++ b/src/app/dashboard/components/lessons/lesson-create/lesson-create.component.html
@@ -24,8 +24,7 @@
                 <button
                     type="submit"
                     class="guardarBtn"
-                    mat-raised-button
-                    [disabled]="form.invalid">
+                    mat-raised-button>
                     {{ edit ? 'Guardar cambios' : 'Guardar'}}
                 </button>
                 <a mat-raised-button mat-dialog-close>Cancelar</a>
