--- a/src/app/dashboard/components/course-registration/lessons/lessons.component.scss
+++ b/src/app/dashboard/components/course-registration/lessons/lessons.component.scss
@@ -51,3 +51,11 @@ td.mat-cell:last-of-type
     margin-left: 5px;
     min-width: 40px;
 }
+
+.leccionesHeader
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+}
