--- a/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.scss
+++ b/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.scss
@@ -184,3 +184,18 @@ form h1 {
     background: var(--main-color2);
     color: white;
 }
+
+.calificarForo
+{
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    mat-radio-group{
+        padding-left: 1rem;
+        display: flex;
+        flex-direction: column;
+    }
+    mat-radio-button{
+        margin: 0.5rem 0.2rem;
+    }
+}
